# org-identity-sdk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.gitee/: go.yaml
.github/workflows/: test.yml
.workflow/: org-identity-sdk-test.yml
docs/: api_reference.md
examples/: advanced_usage.py  basic_usage.py
schema/: org-identity.schema.json
src/org_identity/: __init__.py  builder.py  client.py  exporter.py  validator.py  verifier.py
tests/: test_builder.py  test_validator.py
